# v8ray

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  WINDOWS_TEST_REPORT.md  fix_wsl_display.sh  flutter_rust_bridge.yaml
.github/workflows/: ci.yml  full-build.yml  release.yml
app/: README.md  analysis_options.yaml  dart_test.yaml  l10n.yaml  pubspec.yaml  run_with_sudo.sh
app/android/app/: build.gradle.kts
app/integration_test/: app_test.dart  connection_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/constants/: app_constants.dart  index.dart
app/lib/core/error/: app_error.dart  error_handler.dart  error_messages.dart  index.dart
app/lib/core/ffi/: config.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  platform.dart
app/lib/core/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
app/lib/core/providers/: app_update_provider.dart  connection_provider.dart  index.dart  locale_provider.dart  proxy_mode_provider.dart  server_provider.dart  subscription_provider.dart  system_proxy_provider.dart  theme_provider.dart  xray_core_update_provider.dart
app/lib/core/router/: app_router.dart  index.dart
app/lib/core/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart  index.dart
app/lib/core/utils/: formatters.dart  index.dart  logger.dart  responsive.dart  validators.dart
app/lib/domain/models/: subscription.dart
app/lib/presentation/pages/: about_page.dart  advanced_mode_page.dart  settings_page.dart  simple_mode_page.dart  subscription_page.dart
app/lib/presentation/widgets/: animated_button.dart  animated_list_item.dart  app_update_checker.dart  connection_animations.dart  connection_button.dart  connection_status_card.dart  enhanced_error_display.dart  (+9 more)
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: app_update_test.dart  connection_flow_test.dart  connection_integration_test.dart  error_handling_test.dart  ffi_test.dart  server_selection_test.dart  subscription_test.dart  system_proxy_test.dart  ui_interaction_test.dart  version_test.dart  widget_test.dart  xray_core_update_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
core/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml
core/src/: error.rs  frb_generated.rs  lib.rs  main.rs  version.rs
core/src/bridge/: api.rs  config.rs  connection.rs  events.rs  mod.rs  platform.rs  subscription.rs  traffic.rs
core/src/config/: manager.rs  mod.rs  parser.rs  validator.rs
core/src/connection/: mod.rs  reconnect.rs  stats.rs
core/src/platform/: mod.rs
core/src/subscription/: http_client.rs  mod.rs  parser.rs  scheduler.rs  storage.rs
core/src/utils/: crypto.rs  logger.rs  mod.rs  network.rs
core/src/xray/: mod.rs  updater.rs
core/tests/: integration_bugfix_test.rs  integration_test.rs  subscription_integration_test.rs  test_real_subscription.rs  trojan_sni_test.rs  xray_integration_test.rs
core/tests/common/: mod.rs
core/tests/integration/: config_integration_test.rs  mod.rs
docs/: ci-cd-guide.md  development-plan.md  sprint-3-completion.md
scripts/: build.bat  build.sh  check-quality.ps1  check-quality.sh  download_xray.dart  post_build.bat  post_build.sh  pre_build.bat  pre_build.sh  run-tests.ps1  run-tests.sh  verify_windows_dll.bat
(+12 files in other folders)
